force-app/main/default/objects/msmxSheet__MsmxSheet__c/fields/msmxSheet__Key__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>{Book ID}:{Sheet ID}</description>
    <externalId>true</externalId>
    <label>Sheet Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>