force-app/main/default/objects/msmxSheet__MsmxSheet__c/fields/msmxSheet__SheetId__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__SheetId__c</fullName>
    <externalId>true</externalId>
    <label>Sheet ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>