force-app/main/default/objects/msmxSheet__MsmxSheet__c/listViews/msmxSheet__All.listView-meta.xml
<ListView>
    <fullName>msmxSheet__All</fullName>
    <columns>msmxSheet__Book__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>